--- a/index.html
+++ b/index.html
@@ -71,7 +71,12 @@
           "@type": "ImageObject",
           "url": "https://socialchat.site/lovable-uploads/d215e62c-d97d-4600-a98e-68acbeba47d0.png"
         }
-      }
+      },
+      "datePublished": "2025-01-01",
+      "dateModified": "2025-06-28",
+      "sameAs": [
+        "https://www.linkedin.com/company/socialchatmz"
+      ]
     }
     </script>
     
